# simple_load

./: .gitattributes  .gitignore  PROBLEM.md  README.md  REFACTOR_PLAN.md  build.bat  build_nuitka.sh  inno_setup.iss  main.py  pyproject.toml  release.ps1  release.sh
.cursor/rules/: export-excel-order.mdc
.github/workflows/: build.yml
app_simpleLoad/: routes.py
app_simpleLoad/core/: config.py  logger.py  memory.py  progress.py
app_simpleLoad/module/: cal_simpleLoad.py
app_simpleLoad/services/: file_reader.py
my_websockets/: global_ws.py  socket_manager.py  socket_routes.py
utils/: __init__.py  _memory.py
